--- a/LondonMeetup.Demo.V8Way/Views/master.cshtml
+++ b/LondonMeetup.Demo.V8Way/Views/master.cshtml
@@ -1,4 +1,5 @@
-﻿@using Umbraco.Core.PropertyEditors
+﻿@using System.Web.Optimization
+@using Umbraco.Core.PropertyEditors
 @inherits UmbracoViewPage
 @{
     Layout = null;
@@ -18,7 +19,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link rel="stylesheet" href="@Url.Content("~/css/umbraco-starterkit-style.css")" />
+    @Styles.Render("~/bundles/styles")
     @RenderSection("Header", required: false)
 </head>
 
@@ -73,7 +74,7 @@
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"></script>
-    <script src="@Url.Content("~/scripts/umbraco-starterkit-app.js")"></script>
+    @Scripts.Render("~/bundles/scripts")
 
 </body>
 
